--- a/api/src/public/assets/css/commom.css
+++ b/api/src/public/assets/css/commom.css
@@ -28,12 +28,17 @@ body {
     position: relative;
     height: 460px;
     padding: 20px;
+    transition: .8s;
 }
 
 .panel h1 {
     color: #444;
     text-align: center;
     font-size: 38px;
+}
+
+.panel div {
+    width: 100%;
 }
 
 .panel img {
@@ -49,16 +54,22 @@ body {
     margin-top: 25px;
     font-size: 28px;
     list-style: none;
+    z-index: 1;
+    position: absolute;
 }
 
 .description li {
     padding: 5px;
     display: flex;
     align-items: center;
-    color: #000;
+    color: #444;
 }
 
-.description li::before {
+#first-panel {
+    transition: .4s;
+}
+
+#first-panel .description li::before {
     content: '';
     display: inline-block;
     vertical-align: middle;
@@ -70,10 +81,46 @@ body {
     border-left: 5px solid #FA9A0A;
 }
 
+#second-panel {
+    display: none;
+    width: 300px;
+    transition: .8s;
+    opacity: 0;
+}
+
+#second-panel img {
+    left: -5px;
+}
+
+#second-panel .description {
+    width: 257px;
+    font-size: 20px;
+    right: 0;
+    text-align: right;
+    bottom: 175px;
+}
+
+#second-panel .description li {
+    width: 248px;
+    font-size: 22px;
+    display: flex;
+    justify-content: right;
+}
+
+#second-panel .description li::after {
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+    width: 0;
+    height: 0;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-right: 5px solid #FA9A0A;
+}
+
 
 /* FORM SIGN */
-
-#sign-in h2 {}
 
 .panel h2 {
     color: #444;
@@ -93,6 +140,7 @@ body {
     width: 100%;
     margin-top: 30px;
     padding: 5px;
+    position: relative;
 }
 
 .form-group input {
@@ -105,20 +153,56 @@ body {
     color: #F0750A;
 }
 
+.form-group p {
+    margin-bottom: 10px;
+}
+
+.form-group p a {
+    color: #000;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-family: sans-serif;
+    letter-spacing: .8px;
+    font-weight: 400;
+}
+
 .form-group button {
     background-color: #F0750A;
     padding: 15px 25px;
-    float: right;
     font-family: sans-serif;
     font-weight: bold;
     color: #fff;
     font-size: 18px;
     border: 2px solid #F0750A;
     transition: .5s;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 .form-group button:hover {
     background-color: transparent;
     color: #F0750A;
     cursor: pointer;
+}
+
+#sign-up input {
+    height: 45px;
+    margin-top: -5px;
+}
+
+
+/* Sign In */
+
+#sign-in {
+    transition: .4s;
+}
+
+
+/* Sign UP */
+
+#sign-up {
+    display: none;
+    transition: .8s;
+    opacity: 0;
 }
