--- a/api/src/views/sign.html
+++ b/api/src/views/sign.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WhatsGram</title>
     <link rel="stylesheet" href="./assets/css/commom.css">
+    <link rel="stylesheet" href="./assets/css/sign.css">
 </head>
 
 <body>
@@ -52,13 +53,13 @@
 
 
     <main class="panel" id="sign">
-        <form id="sign-in">
+        <form id="sign-in" method="post">
             <h2>Entrar</h2>
             <div class="form-group">
-                <input type="text" id="" name="" placeholder="Email">
+                <input type="email" id="" name="email" placeholder="Email">
             </div>
             <div class="form-group">
-                <input type="text" id="" name="" placeholder="Senha">
+                <input type="password" id="" name="senha" placeholder="Senha">
             </div>
             <div class="form-group">
                 <p>
