--- a/api/src/views/sign.html
+++ b/api/src/views/sign.html
@@ -53,13 +53,13 @@
 
 
     <main class="panel" id="sign">
-        <form id="sign-in" method="post">
+        <form id="sign-in">
             <h2>Entrar</h2>
             <div class="form-group">
                 <input type="email" id="" name="email" placeholder="Email">
             </div>
             <div class="form-group">
-                <input type="password" id="" name="senha" placeholder="Senha">
+                <input type="password" id="" name="password" placeholder="Senha">
             </div>
             <div class="form-group">
                 <p>
@@ -75,13 +75,13 @@
         <form id="sign-up">
             <h2>Cadastre-se</h2>
             <div class="form-group">
-                <input type="text" name="nome" placeholder="Nome Completo">
+                <input type="text" name="name" placeholder="Nome Completo">
             </div>
             <div class="form-group">
                 <input type="email" name="email" placeholder="Email">
             </div>
             <div class="form-group">
-                <input type="text" name="senha" placeholder="Senha">
+                <input type="password" name="password" placeholder="Senha">
             </div>
             <div class="form-group">
                 <p>
@@ -91,6 +91,9 @@
             </div>
         </form>
     </main>
+    <script src="./assets/js/register.js" type="module"></script>
+    <script src="./assets/js/login.js" type="module"></script>
+
     <script src="./assets/js/scripts.js"></script>
 </body>
 
