--- a/api/src/views/index.html
+++ b/api/src/views/index.html
@@ -32,22 +32,7 @@
 
         <section id="displays-panel">
             <ul id="conversations" class="list-display">
-                <li>
-                    <img src="./assets/img/user-icon.png" alt="imagem de perfil">
-                    <p>kjncfkjsw skiwfksnf</p>
-                </li>
-                <li>
-                    <img src="./assets/img/user-icon.png" alt="imagem de perfil">
-                    <p>kjncfkjsw skiwfksnf</p>
-                </li>
-                <li>
-                    <img src="./assets/img/user-icon.png" alt="imagem de perfil">
-                    <p>kjncfkjsw skiwfksnf</p>
-                </li>
-                <li>
-                    <img src="./assets/img/user-icon.png" alt="imagem de perfil">
-                    <p>kjncfkjsw skiwfksnf</p>
-                </li>
+
             </ul>
         </section>
 
@@ -73,6 +58,8 @@
 
         </section>
     </main>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./assets/js/timeline.js" type="module"></script>
 </body>
 
 </html>
